@@ -73,7 +73,7 @@ terminating newline, your script must send that itself, e.g.:
 
  print "Content-type: text/html\n\n";
 
-If you're using CGI.pm or CGI::Switch and 'print $q->header' you do
+If you're using CGI.pm and 'print $q->header' you do
 _not_ need C<PerlSendHeader On>.    
 
 =item NPH SCRIPTS
